gccida/g2/distribute_notes
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/distribute_notes/src/combine.c:12558:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v21; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/distribute_notes/src/combine.c:12560:4: error: expected ';' after expression
rtx reg_note; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/distribute_notes/src/combine.c:12560:5: error: must use 'enum' tag to refer to type 'reg_note'
rtx reg_note; // r14 
    ^
    enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/distribute_notes/src/combine.c:12561:4: error: expected ';' after expression
rtx real_insn; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/distribute_notes/src/combine.c:12561:5: error: use of undeclared identifier 'real_insn'; did you mean 'next_insn'?
rtx real_insn; // rax 
    ^~~~~~~~~
    next_insn
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/distribute_notes/src/rtl.h:1347:12: note: 'next_insn' declared here
extern rtx next_insn                    PARAMS ((rtx));
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/distribute_notes/src/combine.c:12564:4: error: expected ';' after expression
rtx v27; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/distribute_notes/src/combine.c:12564:5: error: use of undeclared identifier 'v27'
rtx v27; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/distribute_notes/src/combine.c:12567:4: error: expected ';' after expression
rtx v30; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/distribute_notes/src/combine.c:12567:5: error: use of undeclared identifier 'v30'; did you mean 'v10'?
rtx v30; // rdx 
    ^~~
    v10
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/distribute_notes/src/combine.c:12547:9: note: 'v10' declared here
rtunion v10; // rax 
        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/distribute_notes/src/combine.c:12576:6: error: use of undeclared identifier 'v41'
rtx *v41; // r9 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/distribute_notes/src/combine.c:12578:4: error: expected ';' after expression
rtx v43; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/distribute_notes/src/combine.c:12578:5: error: use of undeclared identifier 'v43'
rtx v43; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/distribute_notes/src/combine.c:12583:4: error: expected ';' after expression
rtx v48; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/distribute_notes/src/combine.c:12583:5: error: use of undeclared identifier 'v48'
rtx v48; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/distribute_notes/src/combine.c:12592:4: error: expected ';' after expression
rtx v57; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/distribute_notes/src/combine.c:12592:5: error: use of undeclared identifier 'v57'
rtx v57; // rbp 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/distribute_notes/src/combine.c:12605:4: error: expected ';' after expression
rtx v70; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/distribute_notes/src/combine.c:12605:5: error: use of undeclared identifier 'v70'
rtx v70; // rsi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/distribute_notes/src/combine.c:12611:4: error: expected ';' after expression
rtx v76; // rdx 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/distribute_notes/src/obj/combine.o] Error 1
